project/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foodcart
  labels:
    app: foodcart
    environment: production
